Подробный вывод информации о GC. Пример с классом VerboseGarbageCollectorRunner